--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: wet-boew/gcweb-jekyll
 title: Sample website with GCWeb Jekyll theme
 
 
-# page front matter defaults
+# page front matter defaults #
 defaults:
   - scope:
       path: " # Ensure it's applied to all pages
