--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ title: Sample website with GCWeb Jekyll theme
 # page front matter defaults #
 defaults:
   - scope:
-      path: " # Ensure it's applied to all pages
+      path: "" # Ensure it's applied to all pages
     values:
       layout: default
